--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "@mikro-orm/postgresql": "6.4.3",
     "awilix": "^8.0.1",
     "pg": "^8.13.0",
-    "render": "^0.1.4"
+    "render": "^0.1.4",
+    "resend": "^6.1.3"
   },
   "devDependencies": {
     "@medusajs/test-utils": "2.10.0",
