--- a/package.json
+++ b/package.json
@@ -27,14 +27,18 @@
     "@medusajs/admin-sdk": "2.10.3",
     "@medusajs/cli": "2.10.3",
     "@medusajs/framework": "2.10.3",
+    "@medusajs/icons": "2.10.3",
     "@medusajs/medusa": "2.10.3",
     "@medusajs/notification": "2.10.3",
+    "@medusajs/ui": "4.0.23",
     "@mikro-orm/core": "6.4.3",
     "@mikro-orm/knex": "6.4.3",
     "@mikro-orm/migrations": "6.4.3",
     "@mikro-orm/postgresql": "6.4.3",
     "awilix": "^8.0.1",
     "pg": "^8.13.0",
+    "posthog-node": "^4.17.1",
+    "react-router-dom": "6.20.1",
     "render": "^0.1.4",
     "resend": "^6.1.3"
   },
@@ -57,6 +61,6 @@
     "yalc": "^1.0.0-pre.53"
   },
   "engines": {
-    "node": ">=20"
-  }
+  "node": ">=20.0.0 <22"
+}
 }
