--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "target": "ES2021",
     "esModuleInterop": true,
-    "module": "commonjs",
+    "module": "node16",
     "moduleResolution": "node16",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
