--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "@medusajs/framework": "2.10.3",
     "@medusajs/icons": "2.10.3",
     "@medusajs/medusa": "2.10.3",
-    "@medusajs/notification": "2.10.3",
+    "@medusajs/notification": "^2.10.3",
     "@medusajs/ui": "4.0.23",
     "@mikro-orm/core": "6.4.3",
     "@mikro-orm/knex": "6.4.3",
@@ -61,6 +61,6 @@
     "yalc": "^1.0.0-pre.53"
   },
   "engines": {
-  "node": ">=20.0.0 <22"
-}
+    "node": "20.17.1"
+  }
 }
