--- a/package.json
+++ b/package.json
@@ -35,17 +35,20 @@
     "@mikro-orm/knex": "6.4.3",
     "@mikro-orm/migrations": "6.4.3",
     "@mikro-orm/postgresql": "6.4.3",
+    "@swc/core": "1.5.7",
     "awilix": "^8.0.1",
     "pg": "^8.13.0",
     "posthog-node": "^4.17.1",
     "react-router-dom": "6.20.1",
     "render": "^0.1.4",
-    "resend": "^6.1.3"
+    "resend": "^6.1.3",
+    "ts-node": "^10.9.2",
+    "tsconfig-paths": "^4.2.0",
+    "typescript": "^5.6.2"
   },
   "devDependencies": {
     "@medusajs/test-utils": "2.10.3",
     "@mikro-orm/cli": "6.4.3",
-    "@swc/core": "1.5.7",
     "@swc/jest": "^0.2.36",
     "@types/jest": "^29.5.13",
     "@types/node": "^20.0.0",
@@ -55,8 +58,6 @@
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.6.2",
     "vite": "^5.2.11",
     "yalc": "^1.0.0-pre.53"
   },
