fix: update tsconfig for proper module resolution and fix include pattern
- Change module from 'commonjs' to 'nodenext' for ESM/CJS interop
- Change moduleResolution from 'node' to 'nodenext'
- Fix include pattern from '**/*' to specific files (src/**, medusa-config.ts, .medusa/types/*)
- Prevents compiling build artifacts and node_modules
- Fixes TS5110 and module resolution errors

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,8 +2,8 @@
   "compilerOptions": {
     "target": "ES2021",
     "esModuleInterop": true,
-    "module": "commonjs",
-    "moduleResolution": "node",
+    "module": "nodenext",
+    "moduleResolution": "nodenext",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "skipLibCheck": true,
@@ -28,7 +28,8 @@
     "swc": true
   },
   "include": [
-    "**/*",
+    "src/**/*",
+    "medusa-config.ts",
     ".medusa/types/*"
   ],
   "exclude": [
